Fixed Blurry upload issue

--- a/style.css
+++ b/style.css
@@ -59,14 +59,3 @@ body
   background: #4CAF50;
 }
 
-.preview
-{
-	max-height:400px;
-}
-
-canvas
-{
-  width: 80%;
-  
-}
-
